3/27/25:

- Create changelog document
- Update README.md with css opacity property resource
- Create etchasketch.js, etchasketch.html, and etchasketch.css files