@@ -1,0 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="etchasketchStyle.css">
+    <title>Etchasketch</title>
+</head>
+<body>
+    
+
+    <script src="etchasketchJS.js"></script>
+</body>
+</html>
